@@ -460,13 +460,13 @@ typedef __mpq_struct *mpq_ptr;
 #define __GMP_EXTERN_INLINE  __inline
 #endif
 
-/* Recent enough Sun C compilers accept "extern inline" */
+/* Recent enough Sun C compilers want "inline" */
 #if defined (__SUNPRO_C) && __SUNPRO_C >= 0x560 \
   && ! defined (__GMP_EXTERN_INLINE)
-#define __GMP_EXTERN_INLINE  extern inline
+#define __GMP_EXTERN_INLINE  inline
 #endif
 
-/* Somewhat older Sun C compilers accept "static inline" */
+/* Somewhat older Sun C compilers want "static inline" */
 #if defined (__SUNPRO_C) && __SUNPRO_C >= 0x540 \
   && ! defined (__GMP_EXTERN_INLINE)
 #define __GMP_EXTERN_INLINE  static inline
